// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`i18nContainer utils createTranslationMethodFromLocale 1`] = `
Array [
  <span>
    Warning! Transaction failed, log: 
  </span>,
  <span>
    FAILED!
  </span>,
]
`;

exports[`i18nContainer utils createTranslationMethodFromLocale 2`] = `
Array [
  <span>
    Warnung! Transaktion fehlgeschlagen, Log:
  </span>,
  <span>
    FAILED!
  </span>,
]
`;
